<resources>
    <string name="app_name">Concept 3</string>
    <string name="input_hint">Type or speak something..</string>
    <string name="enter_age">Enter your age</string>

    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="othersex">Third Gender</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="no_account">No account yet? Create one</string>

    <string name="terms_condition">Terms &amp; Condition</string>
    <string name="send">Send</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="cityState">Enter City Name</string>

    <string name="search_hint">Search Story</string>

    <string name="all">All</string>
    <string name="favourite">Favourite</string>
    <string name="mypost">My Post</string>


    <string name="empty_list_text">You have nothing to sbow</string>
    <string name="already_have_account">Already, Register Click here to Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="like">LIKE</string>
    <string name="share">SHARE</string>
    <string name="button_desc">Like button</string>
    <string name="select_category">Select Category to filter</string>
</resources>
